# power-fv

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
cores/dinofly/: checks.pfv
cores/dinofly/dinofly_cli/: __main__.py  core.py
cores/microwatt/: 0001-WIP.patch  README.md  _wrapper.py  checks.pfv  microwatt.py  microwatt_top.vhdl  run.py
cores/microwatt/microwatt/: __main__.py  core.py
cores/microwatt/microwatt_cli/: __main__.py  core.py
power_fv/: __init__.py  dut.py  insn.py  intr.py  pfv.py  reg.py  session.py  tb.py  utils.py
power_fv/check/: __init__.py  _timer.py  all.py  causal.py  cia.py  gpr.py  liveness.py  storage.py  unique.py
power_fv/check/insn/: __init__.py  addsub.py  all.py  bcd.py  branch.py  byterev.py  compare.py  cr.py  loadstore.py  logical.py  msr.py  muldiv.py  rotate.py  spr.py  syscall.py  trap.py
power_fv/checks/: __init__.py  _branch.py  all.py  cr.py  gpr.py  ia_fwd.py  insn_b.py  insn_ba.py  insn_bc.py  insn_bca.py  insn_bcctr.py  insn_bcctrl.py  insn_bcl.py  insn_bcla.py  insn_bclr.py  insn_bclrl.py  insn_bctar.py  insn_bctarl.py  insn_bl.py  insn_bla.py  spr.py  unique.py
power_fv/checks/cons/: all.py  cr.py  gpr.py  ia_fwd.py  spr.py  unique.py
power_fv/checks/insn/: _addsub.py  _branch.py  _compare.py  _cr.py  _fmt.py  _insn.py  _spr.py  all.py
power_fv/core/: __init__.py
power_fv/insn/: __init__.py  const.py  field.py
power_fv/insn/spec/: __init__.py  addsub.py  bcd.py  branch.py  byterev.py  compare.py  cr.py  loadstore.py  logical.py  msr.py  muldiv.py  rotate.py  (+4 more)
power_fv/test/: model.py  opv.py
(+5 files in other folders)
