[tool.poetry]
name = "power-fv"
version = "0.1.0"
description = "Assertion-based formal verification library for OpenPOWER processors"
authors = ["Jean-François Nguyen <jf@jfng.fr>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "~3.0"
paramiko = "~2.11"
amaranth = {git = "https://github.com/amaranth-lang/amaranth.git", branch="main"}
amaranth_soc = {git = "https://github.com/amaranth-lang/amaranth-soc.git", branch="main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
