[metadata]
name = "power-fv"
description = "An end-to-end formal verification testbench for POWER processors"
authors = ["Jean-François Nguyen <jf@jfng.fr>"]
license = "BSD"

[options]
packages = find:
python_requires = >=3.8
install_requires =
    jinja2~=2.11 # for power_fv.build

[options.packages.find]
exclude =
    tests
    tests.*
    cores
